--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,7 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -93,7 +93,7 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -127,5 +127,8 @@
       }
     }
   },
-  "defaultProject": "ng-goodreads"
+  "defaultProject": "ng-goodreads",
+  "cli": {
+    "analytics": "984101bc-7cc5-4fe2-a1fe-0899112992a9"
+  }
 }
